--- a/gb/25/2/14/n14436881.md
+++ b/gb/25/2/14/n14436881.md
@@ -1,40 +1,44 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大陆甲流疫情死讯纷传 网曝死亡证明隐瞒死因</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>大陆疫情肆虐中共掩盖 民间呼吁真相</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437162-099b5f6a106f9299d29c86b9b2a1a4d5-600x400.jpg" />
-<h6>北京的“Arina ChI”女士，儿子因甲流去世，她整理八宝山殡仪馆给的死亡证明写着“肺出血”，她追问，“原来，都不能够留下真正死因吗？这是禁忌？”（网络截图）
+<h6>北京网友“Arina ChI”女士的儿子因甲流去世，而八宝山殡仪馆给的死亡证明却写“肺出血”，她追问，“原来，都不能够留下真正死因吗？这是禁忌？”（网络截图）
 </h6>
 <hr>
-	<p>【大纪元2025年02月14日讯】（大纪元记者骆亚采访报导）大陆甲流大爆发，但中共官方没有发布甲流的重症和死亡的统计数据，很多民众在社交媒体上曝光大量甲流重症和死亡病例；香港一个月内就有137人因甲流去世。此外，有患者家属发现因甲流去世的亲人的死亡证明上写的是其它原因，民间呼吁中共公布真实重症、死亡数据。</p>
-<h2>甲流死亡证明写其它死因 中共故伎重演</h2>
-<p>北京的一位母亲“Arina ChI”的儿子因甲流去世，她在准备去街道给儿子处理身后事，在查看八宝山殡仪馆给的死亡证明和火化证明时发现，死亡原因写的是“肺出血”。她不解问道：“可是大夫明明和妈妈说是‘甲流’，原来，都不能够留下真正死因吗？这是禁忌？还是，你本就不是被甲流带走？妈妈百思不得其解。”</p>
-<p>她说，“妈妈想问个究竟，可是我又能找谁讨个答案？只有老天爷了吧……待我路过孟婆处，且把思绪问清。”</p>
-<div class="mceTemp"></div>
-<figure id="attachment_14437162" aria-describedby="caption-attachment-14437162" style="width: 559px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437162-099b5f6a106f9299d29c86b9b2a1a4d5.jpg"><img decoding="async" class=" wp-image-14437162" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437162-099b5f6a106f9299d29c86b9b2a1a4d5-450x338.jpg" alt="" width="559" b="420" /></a><figcaption id="caption-attachment-14437162" class="wp-caption-text">北京网友“Arina ChI”女士的儿子因甲流去世，而八宝山殡仪馆给的死亡证明却写“肺出血”，她追问，“原来，都不能够留下真正死因吗？这是禁忌？”（网络截图）</figcaption></figure>
-<p>很多患者表示，现在去医院都不给检测，直接当甲流治疗。还有不少患者表示，自己这次感染的既不是甲流、也不是乙流，医生都说不知道是啥病毒。</p>
-<p>大陆一名防疫人员向大纪元记者表示，国家在这方面隐瞒很多消息，理由是怕引起恐慌，很有可能是有人感染的是禽流感或者是新冠病毒（中共病毒），这部分人感染的死亡率高。</p>
-<p>大陆社交媒体上也有很多人不解，比如四川网友在三周前质疑说，“是甲流还是新冠谁知道？”山西的网友三周前也质疑，“也许可能并不是单纯的甲流，好多合并其它病毒的。”</p>
-<p>无独有偶，新冠病毒大爆发时，中共统计的新冠病毒死亡人数就令世界瞠目。大纪元此前报导过，中共疾控中心公布的新冠死亡数据，2022年12月7日至2023年1月8日仅为38人。</p>
-<p>当时北京大学报告称，自12月7日到1月11日全国感染率已近64%，约9亿人。全国的死亡率是0.003%，被网友嘲讽低达3000万分之一的死亡率，无疑是创造了人类医学史上新的奇迹。</p>
-<p>当时大量患者家属表示，疫情集中死亡的人中，死亡原因都不提新冠，写的是因并发症死亡。</p>
-<p>2023年1月14日，迫于国际舆论压力，中共卫健委医政司司长焦雅辉在国务院新闻会上突然公布了一个数据称，“2022年12月8日—2023年1月12日的36天，全国医疗机构累计发生在医院的新冠病毒感染相关死亡病例59,938例。”但这个数字也被外界抨击为造假。（参见《<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/1/14/n13907060.md#1">压力下公布染疫6万人死 分析：中共玩数据游戏</a>》）</p>
-<p>去年底，端传媒报导，“在无法公开讨论新冠死亡的情况下，许多失去亲人的家属组建了微信群，在那里，彼此陪伴、互相疗愈，承受着共同的悲痛。”“群内记录了他们的无奈与思念。”</p>
-<h2>香港公布甲流死亡数据 一个月死了134人</h2>
-<p>根据大陆媒体最新报导，香港流感一个月内（今年1月5日至2月5日）有重症病例240例，其中死亡为137人。</p>
-<p>另外大陆媒体和社交媒体身上带风向、节奏的人反复报导海外美国、日本、韩国等流感如何严重，死了多少人，同时充斥着大量抹黑海外的假新闻，但对国内疫情真实情况，甚少提及。</p>
-<p>大陆人其实更关注的是自己身边的疫情情况。安徽的网友“丫丫”2月10日呼吁说，“有关部门统计各地因甲流感染导致的死亡事件了吗？最近几天刷现频，看到评论这儿很多人的家人、亲戚、同事的家人/亲戚，把甲流当成普通感冒没有重视导致离世。”</p>
+	<p>【大纪元2025年02月14日讯】（大纪元记者骆亚采访报导）大陆甲流疫情大爆发，中共官方没有发布甲流的重症和死亡的统计数据，但民众在社交媒体上曝光大量甲流重症和死亡病例，还有患者家属发现因甲流去世的亲人的死亡证明上写的是其它原因，民间呼吁中共公布真实数据。此外，香港公布一个月内就有137人因甲流去世。</p>
+<h2>北京妈妈：儿子甲流死亡 死亡证明写的是肺出血</h2>
+<p>北京的一位母亲“Arina ChI”因儿子甲流去世，去街道给儿子处理身后事时，发现八宝山殡仪馆给的死亡证明和火化证明上死亡原因写的是“肺出血”。她将相关信息发到网上，并质问，“可是大夫明明和妈妈说是‘甲流’，原来，都不能够留下真正死因吗？这是禁忌？还是，你本就不是被甲流带走？妈妈百思不得其解。”</p>
+<p>她在帖子中说，“妈妈想问个究竟，可是我又能找谁讨个答案？只有老天爷了吧……待我路过孟婆处，且把思绪问清。”</p>
+<figure id="attachment_14437162" aria-describedby="caption-attachment-14437162" style="width: 491px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437162-099b5f6a106f9299d29c86b9b2a1a4d5.jpg"><img decoding="async" class=" wp-image-14437162" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437162-099b5f6a106f9299d29c86b9b2a1a4d5-450x338.jpg" alt="" width="491" b="369" /></a><figcaption id="caption-attachment-14437162" class="wp-caption-text">北京网友“Arina ChI”女士的儿子因甲流去世，而八宝山殡仪馆给的死亡证明却写“肺出血”，她追问，“原来，都不能够留下真正死因吗？这是禁忌？”（网络截图）</figcaption></figure>
+<p>在网络上，很多患者纷纷发帖曝光自己遇到的情况。有网民表示，现在去医院都不给检测，直接当甲流治疗。还有不少患者表示，自己这次感染的既不是甲流、也不是乙流，医生都说不知道是啥病毒。</p>
+<p>四川网友在三周前质疑说，“是甲流还是新冠谁知道？”山西的网友三周前也质疑，“也许可能并不是单纯的甲流，好多合并其它病毒的。”</p>
+<p>大陆一名防疫人员向大纪元记者表示，国家在这方面隐瞒很多消息，理由是怕引起恐慌，很有可能感染的是禽流感或者是新冠病毒（中共病毒），这部分人感染的死亡率高。</p>
+<p>加拿大中医学院教授Jonathanl刘医生对大纪元表示，“从目前看，实际上在大陆所谓的甲流是那些高致命性的禽流感。因为禽流感在大陆传了多少年了，今年就明显地是传染到人身上了。已经至少五个省市出现这种流行了。”</p>
+<p>“只是说它在掩盖这个（死亡）数字，或者是在要求医生撒谎，诊断出是甲流，也不写具体的感染的病原体。包括死亡原因，很多时候原始病因他不写，写个所谓直接死亡的一些什么肺出血呀，或者肺衰竭呀，呼吸衰竭呀这种。 其实就是为了掩盖。”他说。</p>
+<p>中共一贯隐瞒疫情。新冠（中共病毒）病毒2022年底大爆发时，死亡暴增，火葬场被挤爆。而中共疾控中心公布的新冠死亡数据，2022年12月7日至2023年1月8日仅为38人。当时北京大学报告称，自12月7日到1月11日全国感染率已近64%，约9亿人。</p>
+<p>当时，大量患者家属在网上披露，疫情集中死亡的人中，死亡原因都不提新冠（中共病毒），写的是因并发症死亡。</p>
+<p>2023年1月14日，迫于国际舆论压力，中共卫健委医政司司长焦雅辉在国务院新闻会上突然更新了死亡数据，“2022年12月8日～2023年1月12日的36天，全国医疗机构累计发生在医院的新冠病毒感染相关死亡病例59,938例。”但这个数字也被外界抨击为造假。（参见《<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/1/14/n13907060.md#1">压力下公布染疫6万人死 分析：中共玩数据游戏</a>》）</p>
+<p>去年底，端传媒报导，“在无法公开讨论新冠（中共病毒）死亡的情况下，许多失去亲人的家属组建了微信群，在那里，彼此陪伴、互相疗愈，承受着共同的悲痛。”“群内记录了他们的无奈与思念。”</p>
+<h2>香港甲流一个月死了134人 民众呼吁官方公布大陆数据</h2>
+<p>虽然中共官方没有发布甲流的重症和死亡的统计数据，但香港却发布了相关数据。根据大陆媒体最新报导，香港流感一个月内（今年1月5日至2月5日）有重症病例240例，其中死亡为137人。</p>
+<p>同时，大陆媒体和社交媒体对国内疫情真实情况，甚少提及，反而是反复报导海外美国、日本、韩国等国家的流感疫情以及死亡情况。</p>
+<p>刘医生对大纪元表示，中共在这个问题上是故伎重演。当年萨斯（SARS）疫情时，中共为了掩盖疫情公然撒谎，要求广交会继续进行。到了2019年为了所谓的欢乐气氛，为了所谓的中共的面子，也是照样掩盖疫情。到现在，中共仍然在掩盖。</p>
+<p>“因为经济下滑。现在党魁不是提出要稳经济吗？稳经济就是要稳外资，让更多的人来中国投资经商。实际上在这个节骨眼上，它肯定还会再次撒谎，来欺骗全世界的人，当然受害最大的还是大陆的中国人民。”他说。</p>
+<p>而大陆百姓已经关注到身边的疫情情况。安徽的网友“丫丫”2月10日呼吁说，“有关部门统计各地因甲流感染导致的死亡事件了吗？最近几天刷视频，看到评论这儿很多人的家人、亲戚、同事的家人/亲戚，把甲流当成普通感冒没有重视导致离世。”</p>
 <p>她还说，“虽然只发布国外和香港的甲流引发的震动，没有发国内的数据，但大家都不安定了。现在办公室的同事都戴上口罩，人心惶惶。”</p>
 <p>大纪元此前曾报导，过年期间大陆疫情严重，医院爆满，网上爆出大量死亡讯息。（参见《<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431645.md#1">大陆过年期间疫情重医院爆满 网曝大量死讯</a>》）</p>
-<figure id="attachment_14437083" aria-describedby="caption-attachment-14437083" style="width: 649px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437083-8323d6e0b291c7cf08455453d8de9c91.png"><img decoding="async" class=" wp-image-14437083" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437083-8323d6e0b291c7cf08455453d8de9c91-450x228.png" alt="" width="649" b="329" /></a><figcaption id="caption-attachment-14437083" class="wp-caption-text">安徽的网友“丫丫”2月10日呼吁当局公布重症、死亡统计数据。（视频截图）</figcaption></figure>
+<figure id="attachment_14437083" aria-describedby="caption-attachment-14437083" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437083-8323d6e0b291c7cf08455453d8de9c91.png"><img decoding="async" class=" wp-image-14437083" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437083-8323d6e0b291c7cf08455453d8de9c91-450x228.png" alt="" width="600" b="304" /></a><figcaption id="caption-attachment-14437083" class="wp-caption-text">安徽的网友“丫丫”2月10日呼吁当局公布重症、死亡统计数据。（视频截图）</figcaption></figure>
+<p>相较于香港公布疫情重症死亡数据，中共不但不公布大陆的甲流死亡数据，相反死亡证明上还掩盖甲流的死因。加拿大中医学院教授Jonathanl 刘医生向大纪元表示，中共在这个问题上是重蹈覆辙。“ 当年我们都经历过萨斯（SARS），SARS当时中共为了掩盖疫情公然撒谎，说没有什么大的疫情发生，只是什么一个支原体，所以要求广交会继续进行。到了2019年为了所谓的欢乐气氛，为了所谓的中共的面子，也是照样掩盖疫情。到现在，实际上在中共也是面临着同样的困境，因为经济下滑。现在党魁不是提出要稳经济吗？稳经济就是要稳外资，让更多的人来中国投资经商。实际上在这个节骨眼上，它肯定还会再次撒谎，来欺骗全世界的人，当然受害最大的还是大陆的中国人民。”</p>
 <h2>这波疫情去世的小孩、年轻人居多</h2>
 <p>大纪元此前报导过，这一波疫情去世的儿童多，主要两个并发症非常严重，一个是急性坏死性脑病。医学界认为是流感病毒中最严重的并发症，从发病到死亡前后只有一天时间。（参见《<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14406886.md#1">大陆病毒肆虐多名孩童去世 医生建议戴好口罩</a>》）</p>
 <p>另一个是流感病毒引起的并发症——病毒性心肌炎导致死亡。（参见《<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416577.md#1">大陆多地爆发新一波疫情 网曝大量死亡信息</a>》）</p>
-<p>这一波疫情中死亡的中青年也多，仅仅从大陆社交媒体一个视频中的评论区人们的回应就能窥见一斑。</p>
-<p>在以下这个视频中，四川成都的“洁洁”1月16日说，元旦前还在见面的同事，因为他的女儿染上了甲流，“今天已经了离世了，才三十多岁”。</p>
-<figure id="attachment_14436940" aria-describedby="caption-attachment-14436940" style="width: 563px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14436940-35fc8eb1111fd6ee8999f084c239529d.jpg"><img decoding="async" class=" wp-image-14436940" src="https://i.epochtimes.com/assets/uploads/2025/02/id14436940-35fc8eb1111fd6ee8999f084c239529d-450x300.jpg" alt="" width="563" b="375" /></a><figcaption id="caption-attachment-14436940" class="wp-caption-text">1月16日，四川成都的“洁洁”说，元旦前还在见面的同事，因为他的女儿染上了甲流，“今天已经了离世了，才三十多岁”。</figcaption></figure>
-<p>这个视频引起了3.5万人转发，1万多人点赞，3162人回复。目前人们通过搜索甲流仍能看到这个相关视频。</p>
-<p>2月12日在贵州贵阳，一个乡镇卫生院医务人员在评论区说，有一个1996年（出生的）、研究生毕业的高中在编语文老师，她刚定亲没多久。“大年初七她老公背她进来，前前后后加起来十来分钟，从可以说话到昏迷，然后赶紧转院，路上就没了！估计从进卫生院门到没差不多半个小时左右！”</p>
+<p>这一波疫情中，除了儿童，死亡的中青年也多，大陆社交媒体曝出很多死亡病例。</p>
+<p>在大陆社交媒体一个视频中，四川成都的“洁洁”1月16日说，元旦前还在见面的同事，因为他的女儿染上了甲流，“今天已经离世了，才三十多岁”。</p>
+<p>这个视频引起了3.5万人转发，一万多人点赞，3162人回复。目前人们通过搜索甲流仍能看到这个视频。</p>
+<figure id="attachment_14436940" aria-describedby="caption-attachment-14436940" style="width: 563px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14436940-35fc8eb1111fd6ee8999f084c239529d.jpg"><img decoding="async" class=" wp-image-14436940" src="https://i.epochtimes.com/assets/uploads/2025/02/id14436940-35fc8eb1111fd6ee8999f084c239529d-450x300.jpg" alt="" width="563" b="375" /></a><figcaption id="caption-attachment-14436940" class="wp-caption-text">1月16日，四川成都的“洁洁”说，元旦前还在见面的同事，因为他的女儿染上了甲流，“今天已经离世了，才三十多岁”。（视频截图）</figcaption></figure>
+<p>在该视频下的评论区，至少有几十个中青年死亡的信息。</p>
+<p>2月12日在贵州贵阳，一个乡镇卫生院医务人员在评论区说，有一个1996年（出生的）、研究生毕业的高中在编语文老师，她刚定亲没多久。“大年初七她老公背她进来，前前后后加起来十来分钟，从可以说话到昏迷，然后赶紧转院，路上就没了！估计从进卫生院门到没差不多半个小时左右。”</p>
 <p>2月12日，福建的网友“三分求”表示，“别说甲流了，感冒现在都要注意。认识12年的朋友，（去年）12月份白肺走了，没有发烧，以为是普通感冒，被发现的时候身体都硬了三天，很难过。”</p>
 <p>2月11日，浙江杭州的“小宝”发视频说，某32岁的女性，感染甲流，因为洗个澡就没了。</p>
 <p>2月11日，一个安徽的用户“12138”在评论区留言说，“我妈说村里又阳了一大遍，而且是上吐下泻的……这也是新冠吗？我问她们是不是吃水出了问题，他们说前几天回来的人落地就阳了，然后大家都阳了。”</p>
@@ -42,7 +46,7 @@
 <p>2月10日，湖北网友“爱雪的黎明”在评论区说，“我老公一个老表，大年初四甲流走的，有没有基础病没问，就是很突然，他就和我说了句甲流走的，要多注意，因为当时我娘家家里几个人发烧。”</p>
 <figure id="attachment_14437105" aria-describedby="caption-attachment-14437105" style="width: 559px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437105-23b511c0d44198cccb68f3bd35ff0a59.jpg"><img decoding="async" class=" wp-image-14437105" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437105-23b511c0d44198cccb68f3bd35ff0a59-450x338.jpg" alt="" width="559" b="420" /></a><figcaption id="caption-attachment-14437105" class="wp-caption-text">大陆社交媒体网友评论区揭露这一波疫情死亡信息。（视频截图／大纪元合成）</figcaption></figure>
 <figure id="attachment_14437106" aria-describedby="caption-attachment-14437106" style="width: 554px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14437106-761491cc60f9573beaedae33324231a0.jpg"><img decoding="async" class=" wp-image-14437106" src="https://i.epochtimes.com/assets/uploads/2025/02/id14437106-761491cc60f9573beaedae33324231a0-450x338.jpg" alt="" width="554" b="416" /></a><figcaption id="caption-attachment-14437106" class="wp-caption-text">大陆社交媒体网友评论区揭露这一波疫情死亡信息。（视频截图／大纪元合成）</figcaption></figure>
-<p>2月9日，浙江的“丽娜”也在评论区说，“39岁的小伙子，甲流当做普通感冒，烧了2天挂了盐水，感觉好点了去上班，下午吐血，县医院不敢收直接送杭州，在医院一个月，还是没挺过去。”</p>
+<p>2月9日，浙江的“丽娜”也在评论区说，“39岁的小伙子，甲流当作普通感冒，烧了2天挂了盐水，感觉好点了去上班，下午吐血，县医院不敢收直接送杭州，在医院一个月，还是没挺过去。”</p>
 <p>2月10日湖北的“王仔QQ糖”说，“前天我们会议室一个领导开会心梗直接猝死了，120来做了好久心肺复苏，直接叫殡仪馆用黑袋子拉走了。”</p>
 <p>2月9日河北的网友“人间冰美式”2月9日说，“我妈妈也被甲流带走了，今天是第二天。”</p>
 <p>2月8日，江西的徐女士说，“我一个亲戚，甲流引起的心肌炎，一下就没有了。”</p>
@@ -59,36 +63,42 @@
 <p>三周前，浙江的“梧桐”在评论区说，“我老公同事村里的人也是甲流去世了，才二十来岁。”</p>
 <p>三周前，辽宁的一位博主说，朋友93年出生，头几天感冒严重不去医院。后来不行了直接ICU，再后来在转院途中没了。</p>
 <p>三周前，江苏的一网友表示，“我同事她侄女也是新冠白肺去世的，10岁的小女孩看人就姐姐阿姨地喊，很乖！生命很脆弱。”</p>
-<p>这些介绍因感染甲流死亡的信息，只是记者查看评论区前面近500个留言中一部分，就已经有二十多个中青年死亡的信息。这一个帖子下面有三千多评论区留言。</p>
+<p>对于网络上曝出的大量死亡病例，刘医生对大纪元表示，“中共这种掩盖呢，其实把老百姓置于非常危险的境地中，非常像（隐瞒）这个新冠（疫情）。”</p>
+<p>他说，“新冠其实刚刚过去这才几年，其实还在小范围流行嘛。那么这种情况下，民众呢，我觉得要注意了解真相，了解这个病毒的本来面目。这就需要他能够翻墙又翻墙，能够听到真相的话，不要拒绝真相，才能走出自保的第一步。”</p>
 <p>责任编辑：林琮文#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436468.md#1">过年熬夜追剧 湖北男瞳孔发炎视力跌至0.4</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436312.md#1">宁波男子在餐厅内持剑砍人 致数人受伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436258.md#1">河南男子扔烟头 引爆楼下炮摊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436111.md#1">广东怀集公交车起火至少6死 网民：都是学生</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554901.md#1">“白袍战将”薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429594.md#1">【古道人生】不相信有鬼神的人听到鬼怎么说？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432721.md#1">传承二千年 元宵节俗内涵由来知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432297.md#1">【未解之谜】超神奇轮回案例 双胞姐妹灵魂离体回前世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431324.md#1">中华情人节&#8211;元宵  灯火盛会辉映深刻内涵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436802.md#1">【唐青看时事】川马联盟势如破竹 美政坛新风向</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436693.md#1">【直播】川普在白宫会见莫迪并举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436809.md#1">【菁英论坛】前记者质疑李克强死遭判刑 权斗残酷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435017.md#1">刘诗诗主演《掌心》片酬曝光 折射陆娱圈困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435292.md#1">袁红冰：北京官场耳语 习被坑惨 痛骂王毅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435120.md#1">越南商人非法开采稀土 走私2000多吨至中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434291.md#1">章子怡晒赏雪照庆生 与9岁女儿笑容明媚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434350.md#1">一连3部影视剧遭滑铁卢 杨幂人气大跌引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435134.md#1">周润发感伤香港电影萧条 称拍港戏片酬可商量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436048.md#1">《射雕英雄传》票房不佳 肖战进军大银幕失利</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435384.md#1">为何有些人很容易发脾气？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434559.md#1">专家警告 在飞机上千万别喝这种饮料</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436341.md#1">美国机长：别问飞行员这些烦人的问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431656.md#1">按错肩颈导致中风 安全徒手按摩这样做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/9/n14433342.md#1">研究：社交媒体使用与成年人易怒上升相关</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/14/n14436881.htm">大陆甲流疫情死讯纷传 网曝死亡证明隐瞒死因</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/14/n14436881.htm">大陆疫情肆虐中共掩盖 民间呼吁真相</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/14/n14436881.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
