--- a/gb/25/2/13/n14436258.md
+++ b/gb/25/2/13/n14436258.md
@@ -11,40 +11,45 @@
 	<p>【大纪元2025年02月13日讯】近日，河南南阳一男子楼上扔烟头引爆楼下烟花摊位的视频，在网上引发关注。</p>
 <p>网传视频显示，南阳一小区临街商铺的二楼平台上，一名男子正在吸烟。吸完后，男子把未熄灭的烟头随手扔到窗外，正好落在楼下一家商店摆放在门口的烟花炮竹上。画面中可以看到商店黑色门牌上写着“习酒 窖藏1988 昌盛商行”。</p>
 <p>大概10分钟左右，烟花上开始有白烟冒出，紧接着“劈劈啪啪”开始爆炸，店中一女士听到声响后立即跑出来查看，但当女士找来灭火器时已为时已晚，鞭炮带着火苗四处飞溅，迅速引燃了整个炮竹摊子。</p>
-<p><a title="河南南阳男子朝楼下扔烟头引爆烟花 “习酒”店面被烧" src=""></a><a href="https://d3bo5docy69ast.cloudfront.net/Z9sLk9JDd"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1hduqfg5q592nUMK6khUNUAy01qj1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><a title="河南南阳男子朝楼下扔烟头引爆烟花 “习酒”店面被烧" loading="lazy" data2-src=""></a><a href="https://dqcg8pdekez1x.cloudfront.net/G9vLk9JDn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1hduqfg5q592nUMK6khUNUAy01qj1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>所幸，火势在周围民众的帮助下很快被扑灭，不过整个店铺已被烧得一片漆黑，门口的鞭炮也全都作废。</p>
 <p>2月11日，南阳消防发布该视频称，事故没有造成人员伤亡，发生时间为1月22日。</p>
 <p>高空抛物的危险性再次在网上引发关注。</p>
 <p>责任编辑：高慧#</p>
 <p>&nbsp;</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436111.md#1">广东怀集公交车起火至少6死 网民：都是学生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435534.md#1">安徽一男子点烟花被炸死 瞬间倒地画面曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435473.md#1">村民披露四川山体滑坡惨状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434985.md#1">【唐青看时事】马斯克：USAID资助新冠病毒研究</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554901.md#1">“白袍战将”薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429594.md#1">【古道人生】不相信有鬼神的人听到鬼怎么说？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/5/5/n1304965.md#1">【艺术小百科】优雅而浪漫的夜曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432721.md#1">传承二千年 元宵节俗内涵由来知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432297.md#1">【未解之谜】超神奇轮回案例 双胞姐妹灵魂离体回前世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435938.md#1">【重播】美公民福格尔从俄获释回美 川普迎接</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435726.md#1">【唐青看时事】危险之年 中共军委紧张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435381.md#1">【新闻大家谈】六四诗集主编：纽时记者不懂信仰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434291.md#1">章子怡晒赏雪照庆生 与9岁女儿笑容明媚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434529.md#1">中共国务院宣布多项任命 分析：折射内斗乱象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434240.md#1">中国客机进军越南失利 面临认证困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435017.md#1">刘诗诗主演《掌心》片酬曝光 折射陆娱圈困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434350.md#1">一连3部影视剧遭滑铁卢 杨幂人气大跌引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435134.md#1">周润发感伤香港电影萧条 称拍港戏片酬可商量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434660.md#1">安东尼麦基不戴“美国队长”头盔 要求换战衣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435384.md#1">为何有些人很容易发脾气？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14433933.md#1">为什么苍蝇会被你吸引而来？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434559.md#1">专家警告 在飞机上千万别喝这种饮料</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426644.md#1">医生警告不要滥用牛磺酸补充剂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14430914.md#1">网红零食藏食安危机 专家教你如何护肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/13/n14436258.htm">河南男子扔烟头 引爆楼下炮摊</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436258.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
